--- a/src/Porthor/Porthor.csproj
+++ b/src/Porthor/Porthor.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="1.1.1" />
+    <PackageReference Include="NJsonSchema" Version="8.30.6304.31883" />
   </ItemGroup>
 
 </Project>
