Separate validators, add more options for middleware, add support for environment variables in endpoint url

--- a/src/Porthor/Porthor.csproj
+++ b/src/Porthor/Porthor.csproj
@@ -16,9 +16,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="1.1.1" />
-    <PackageReference Include="NJsonSchema" Version="8.30.6304.31883" />
+    <PackageReference Include="NJsonSchema" Version="8.32.6319.16936" />
   </ItemGroup>
 
 </Project>
