--- a/src/Porthor/Porthor.csproj
+++ b/src/Porthor/Porthor.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Title>Porthor</Title>
     <Description>API gateway middleware for Asp.Net Core</Description>
     <Version>1.0.0</Version>
-    <PackageTags>aspnetcore</PackageTags>
+    <Authors>NicatorBa</Authors>
+    <PackageTags>aspnetcore;gateway;api</PackageTags>
     <PackageProjectUrl>https://github.com/NicatorBa/Porthor</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/NicatorBa/Porthor/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
